Tweaking appearance of MockDashboard and children

--- a/src/ZMetric/Dashboard/Components/LeftMenu/LeftMenu.css
+++ b/src/ZMetric/Dashboard/Components/LeftMenu/LeftMenu.css
@@ -1,14 +1,18 @@
-.ui.image {
-  margin-top: 0px;
-  margin: auto;
-}
-
 .ui.vertical.labeled.icon.ui.push.left.thin.visible.sidebar.flex-container.menu  {
   display: flex;
   justify-content: space-between;
   height: 100%;
 }
 .bottom-aligned {
-  margin: 0px;
-  margin-top: auto;
+  margin: auto 0px 0px;
 }
+
+.ui.mini.image{
+  width: 39px;
+  height: 39px;
+  margin-top: 0px;
+  margin: auto;
+  /*float: left;*/
+}
+
+/*color: "#9A5CA7"*/
