--- a/src/ZMetric/Dashboard/Dashboard.css
+++ b/src/ZMetric/Dashboard/Dashboard.css
@@ -47,5 +47,7 @@ html, body, #app, #app>div {
   height: 100%
 }
 
-
-
+.ui.visible[class*="very thin"].left.sidebar~.fixed, .ui.visible[class*="very thin"].left.sidebar~.pusher {
+  -webkit-transform: translate3d(60px,0,0);
+  transform: translate3d(37px,0,0);
+}
