--- a/src/ZMetric/Dashboard/Components/TopMenu/TopMenu.css
+++ b/src/ZMetric/Dashboard/Components/TopMenu/TopMenu.css
@@ -16,7 +16,6 @@
   margin-bottom: auto;
   margin-left: 3px;
   margin-right: 3px;
-  /*padding:0;*/
 }
 
 
@@ -28,7 +27,8 @@
   background: #fff;
   font-weight: 400;
   border: 1px solid rgba(34,36,38,.15);
-  box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
-  border-radius: .28571429rem;
-  /* min-height: 2.85714286em; */
+  box-shadow: 0 0 50px rgba(34,36,38,.15);
+  position: relative;
+  z-index: 10;
 }
+
