--- a/src/ZMetric/Dashboard/Dashboard.css
+++ b/src/ZMetric/Dashboard/Dashboard.css
@@ -51,3 +51,7 @@ html, body, #app, #app>div {
   -webkit-transform: translate3d(60px,0,0);
   transform: translate3d(37px,0,0);
 }
+
+.ui.left.visible.sidebar, .ui.right.visible.sidebar {
+  box-shadow: none;
+}
