--- a/src/ZMetric/Dashboard/Components/LeftMenu/LeftMenu.css
+++ b/src/ZMetric/Dashboard/Components/LeftMenu/LeftMenu.css
@@ -7,6 +7,7 @@
   display: flex;
   padding: 0;
   height: 40px;
+  min-width: 0;
 }
 .ui.labeled.icon.menu .item>.icon:not(.dropdown){
   height: 1em;
@@ -15,7 +16,7 @@
   margin: auto!important;
 }
 
-.ui.vertical.menu .active.item {
+.ui.icon.menu .active.item {
   background: rgba(0,0,0,.25);
   color: teal;
   border-radius: 0;
