Moved css from embedded style props to .css file for reports

--- a/src/Reports/reports.css
+++ b/src/Reports/reports.css
@@ -6,3 +6,21 @@
   height: 400px;
   background-color: #fff;
 }
+
+.ui.segments.report.container{
+  margin:0!important;
+  border:0;
+}
+
+.ui.segment.dataTable.button{
+  border-top: 0;
+}
+
+.ui.segments:not(.horizontal)>.segment:last-child{
+  border-top:0;
+}
+
+#cumulativeFlowReportOuterSegments{
+  margin:0;
+  border:0;
+}
