--- a/src/ZMetric/Dashboard/Dashboard.css
+++ b/src/ZMetric/Dashboard/Dashboard.css
@@ -1,10 +1,3 @@
-.ui.sidebar.thin ~ .pusher {
-   width: calc(100% - 150px);
- }
-
-.ui.sidebar.very.thin ~ .pusher {
-  width: calc(100% - 50px);
-}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -18,17 +11,12 @@
   margin: 2rem;
 }
 
-#ReportsFilterVisibilityIcon {
-  padding: 5px 0 0 10px;
-}
-
 #topBar {
   padding: 10px 0 0 15px;
 }
 
-#overwritten {
-  margin-top: 10px;
-  margin-bottom: 0;
+#segmentGroupContainingPushable {
+  margin:0;
   height: 100%;
 }
 
@@ -54,4 +42,9 @@ html, body, #app, #app>div {
 
 .ui.left.visible.sidebar, .ui.right.visible.sidebar {
   box-shadow: none;
+}
+
+.pusher .segment.dashboardSegment{
+  padding: 0;
+  margin: 1em auto 0 1em;
 }
