--- a/src/Filters/Local/CumulativeFlowLocalFilters.css
+++ b/src/Filters/Local/CumulativeFlowLocalFilters.css
@@ -5,3 +5,13 @@
 .ui.button{
   color: rgba(255,255,255,.9)
 }
+
+#localFilterBottom{
+  margin: 1em auto 0.5em;
+}
+
+#localFilterDiv {
+  position: relative;
+  left: 1em;
+}
+
