ZMETRIC-153: Resize DateRangeBox and change display format to DD-MM-YY to fit in smaller space, and update unit tests to match this.

--- a/src/ZMetric/Dashboard/Dashboard.css
+++ b/src/ZMetric/Dashboard/Dashboard.css
@@ -48,3 +48,8 @@ html, body, #app, #app>div {
   padding: 0;
   margin: 1em auto 0 1em;
 }
+
+.calendar.icon + input{
+  height: 28.55px;
+  width: 173px;
+}
