ZMETRIC-153: Add padding-right to segment in each report

--- a/src/Reports/reports.css
+++ b/src/Reports/reports.css
@@ -18,3 +18,7 @@
 .ui.segments:not(.horizontal)>.segment:last-child{
   border-top:0;
 }
+
+.ui.basic.segment.chart.segment{
+  padding-right:60px;
+}
