--- a/src/Reports/reports.css
+++ b/src/Reports/reports.css
@@ -22,3 +22,13 @@
 .ui.basic.segment.chart.segment{
   padding-right:60px;
 }
+
+#container {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  width: 100%;
+  height: 400px;
+  background-color: #fff;
+}
